# watchScraper

./: .env.example  .gitignore  CLAUDE.md  alembic.ini  com.watchscraper.scheduler.plist  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_analysis_indexes.py  003_snapshots_and_macro.py  004_portfolio.py  005_reference_centric.py  006_dial_variants.py  007_material_snapshots.py  008_full_specs.py  009_holding_contents_alerts.py
data/: audit.xlsx
docs/: pricing_granularity.md  sales_motion.md  watchcharts_build_spec.md  watchcharts_clone_spec.md  watchcharts_taxonomy.md
notebooks/: value_retention.ipynb
scripts/: backfill_historical.py  backfill_watch_ids.py  export_audit.py  fetch_family_images.py  fetch_ref_images.py  load_browser_harvest.py  rematch_records.py  seed_watches.py
src/watchscraper/: __main__.py  analysis.py  catalog.py  cli.py  config.py  database.py  dedup.py  listings.py  macro.py  matching.py  metrics.py  models.py  pipeline.py  quant.py  reference_data.py  scheduler.py  schemas.py  taxonomy.py  valuation.py
src/watchscraper/normalizers/: price.py  reference.py
src/watchscraper/scrapers/: base.py  chrono24.py  ebay.py  hodinkee.py  (+1 more)
tests/: test_analysis.py  test_dial_variants.py  test_ebay_scraper.py  test_listings.py  test_matching.py  test_materials.py  test_metrics.py  test_portfolio.py  test_price_normalizer.py  test_quant.py  test_ref_valuation.py  test_reference_normalizer.py  test_research.py  test_schemas.py  test_taxonomy.py  test_valuation.py
(+26 files in other folders)
