[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watchscraper"
version = "0.1.0"
description = "Luxury watch price scraper for market trend analysis"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0,<3.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "click>=8.1",
    "chrono24>=0.3",
    "apscheduler>=3.10,<4.0",
    "tenacity>=8.2",
    "fake-useragent>=1.4",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "responses>=0.24",
]
playwright = [
    "playwright>=1.40",
]
analysis = [
    "pandas>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "plotly>=5.18",
    "openpyxl>=3.1",
]

[project.scripts]
watchscraper = "watchscraper.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
